# Praxis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  REPRODUCE.md  docker-compose.yml
agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
agent/configs/: trend_following.yaml  vol_target.yaml
agent/src/praxis/: __init__.py  _typed_np.py  cli.py  config.py  types.py
agent/src/praxis/backtest/: __init__.py  data_loader.py  engine.py  metrics.py  purged_kfold.py  report.py  stats.py
agent/src/praxis/data/: __init__.py  ccxt_binance.py
agent/src/praxis/execution/: __init__.py  cdp_executor.py  slippage.py
agent/src/praxis/policy/: __init__.py  meta_policy.py  regime_detector.py
agent/src/praxis/regime/: __init__.py  hmm.py  vol_regime.py
agent/src/praxis/review/: __init__.py  graph.py  personas.py
agent/src/praxis/risk/: __init__.py  drawdown.py  exposure.py  gate.py  kelly.py
agent/src/praxis/server/: __init__.py  app.py
agent/src/praxis/signals/: __init__.py  base.py  correlation.py  mean_reversion.py  momentum.py  onchain.py  volatility.py
agent/src/praxis/state/: __init__.py  audit_log.py  run_recorder.py
agent/src/praxis/strategies/: __init__.py  base.py  stat_arb.py  trend_following.py  vol_target.py
agent/tests/: test_hmm.py  test_review.py  test_server.py  test_smoke.py  test_stats.py
app/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
contracts/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
docs/: DECISIONS.md  DEPLOY.md  HYPOTHESES.md  LOOM_SCRIPT.md  REPO_GUIDE.md  ROADMAP.md  architecture.md
(+63 files in other folders)
